--- a/src/index.scss
+++ b/src/index.scss
@@ -72,6 +72,14 @@ header {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.5s;
+  overflow: hidden;
+  &__active {
+    opacity: 1;
+    visibility: visible;
+  }
 }
 
 .drawer {
@@ -84,6 +92,12 @@ header {
   background: #ffffff;
   box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
   padding: 30px;
+  transition: all 0.5s;
+  transform: translateX(451px);
+
+  &__active {
+    transform: translateX(0);
+  }
 
   .items {
     flex: 1;
@@ -195,4 +209,13 @@ header {
 .sneakers {
   flex-wrap: wrap;
   row-gap: 30px;
+}
+
+.icon {
+  transition: all 0.3s;
+}
+
+.icon:hover {
+  transform: scale(1.3);
+  will-change: transform;
 }
