--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -4,17 +4,32 @@
   width: 220px;
   border-radius: 40px;
   margin-right: 30px;
+  display: flex;
+  flex-direction: column;
   transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
 
   &:hover {
     box-shadow: 0px 20px 35px rgba(0, 0, 0, 0.06);
     transform: translateY(-5px);
   }
+  &__title {
+    flex: 1 1 100%;
+  }
 
-  .favorite {
+
+  &__favorite {
     position: absolute;
     cursor: pointer;
     background-color: #F6F6F6;
+  }
+  &__label {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__price {
+    display: flex;
+    flex-direction: column;
   }
 
   span {
