--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,31 @@
 body {
+  * {
+    box-sizing: border-box;
+    outline: none;
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+
+  li {
+    list-style-type: none;
+  }
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #e7f6ff;
+  .lock & {
+    overflow: hidden;
+    touch-action: none;
+    padding-right: 17px;
+  }
 }
 
 * {
@@ -35,8 +58,6 @@ header {
   }
 }
 
-
-
 .button {
   background: #ffffff;
   border: 1px solid #f2f2f2;
@@ -48,111 +69,112 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background 0.3s;
+  &:hover {
+    background: #eee
+  }
 
 }
 
-.search-block {
-  border: 1px solid #f3f3f3;
-  border-radius: 10px;
-  padding: 0 15px;
+//.search-block {
+//  border: 1px solid #f3f3f3;
+//  border-radius: 10px;
+//  padding: 0 15px;
+//
+//  input {
+//    border: 0;
+//    padding: 13px;
+//    font-size: 16px;
+//    width: 200px;
+//  }
+//}
 
-  input {
-    border: 0;
-    padding: 13px;
-    font-size: 16px;
-    width: 200px;
-  }
-}
+//.overlay {
+//  position: absolute;
+//  left: 0;
+//  top: 0;
+//  width: 100%;
+//  height: 100%;
+//  background-color: rgba(0, 0, 0, 0.5);
+//  z-index: 1;
+//  opacity: 0;
+//  visibility: hidden;
+//  transition: all 0.5s;
+//  overflow: hidden;
+//  &__active {
+//    opacity: 1;
+//    visibility: visible;
+//  }
+//}
 
-.overlay {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1;
-  opacity: 0;
-  visibility: hidden;
-  transition: all 0.5s;
-  overflow: hidden;
-  &__active {
-    opacity: 1;
-    visibility: visible;
-  }
-}
+//.drawer {
+//  display: flex;
+//  flex-direction: column;
+//  position: absolute;
+//  width: 420px;
+//  height: 100%;
+//  right: 0;
+//  background: #ffffff;
+//  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
+//  padding: 30px;
+//  transition: all 0.5s;
+//  transform: translateX(451px);
+//
+//  &__active {
+//    transform: translateX(0);
+//  }
+//
+//  .items {
+//    flex: 1;
+//    overflow: auto;
+//    margin-bottom: 40px;
+//  }
+//
+//}
+//
+//.cartTotalBlock {
+//  ul {
+//    display: block;
+//    margin-bottom: 40px !important;
+//
+//    li {
+//      display: flex;
+//      align-items: flex-end;
+//      margin-bottom: 20px;
+//
+//      div {
+//        flex: 1;
+//        height: 1px;
+//        border-bottom: 1px dashed #dfdfdf;
+//        position: relative;
+//        top: -4px;
+//        margin: 0 7px;
+//      }
+//    }
+//  }
 
-.drawer {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  width: 420px;
-  height: 100%;
-  right: 0;
-  background: #ffffff;
-  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
-  padding: 30px;
-  transition: all 0.5s;
-  transform: translateX(451px);
+//  .blueButton {
+//    position: relative;
+//
+//    &:hover {
+//      img {
+//        transform: translateX(5px);
+//      }
+//    }
+//
+//    img {
+//      position: absolute;
+//      right: 30px;
+//      top: 20px;
+//      transition: transform 0.15s ease-in-out;
+//    }
+//  }
+//}
 
-  &__active {
-    transform: translateX(0);
-  }
-
-  .items {
-    flex: 1;
-    overflow: auto;
-    margin-bottom: 40px;
-  }
-
-  h2 {
-    margin: 0;
-  }
-}
-
-.cartTotalBlock {
-  ul {
-    display: block;
-    margin-bottom: 40px !important;
-
-    li {
-      display: flex;
-      align-items: flex-end;
-      margin-bottom: 20px;
-
-      div {
-        flex: 1;
-        height: 1px;
-        border-bottom: 1px dashed #dfdfdf;
-        position: relative;
-        top: -4px;
-        margin: 0 7px;
-      }
-    }
-  }
-
-  .greenButton {
-    position: relative;
-
-    &:hover {
-      img {
-        transform: translateX(5px);
-      }
-    }
-
-    img {
-      position: absolute;
-      right: 30px;
-      top: 20px;
-      transition: transform 0.15s ease-in-out;
-    }
-  }
-}
-
-.greenButton {
+.blueButton {
   width: 100%;
   height: 55px;
-  background: #9dd558;
+  background: #318CE7;
   border-radius: 18px;
   border: 0;
   color: #fff;
@@ -162,7 +184,7 @@ header {
   transition: background 0.1s ease-in-out;
 
   &:hover {
-    background: lighten(#9dd558, 5%);
+    background: lighten(#2A4EC4, 5%);
   }
 
   &:active {
@@ -206,7 +228,8 @@ header {
   }
 }
 
-.sneakers {
+.list__items {
+  display: flex;
   flex-wrap: wrap;
   row-gap: 30px;
 }
