--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -3,10 +3,16 @@
   justify-content: space-between;
   align-items: center;
   padding: 40px;
+  @media (max-width: 479.98px){
+    flex-direction: column;
+  }
 
   &__label {
     display: flex;
     align-items: center;
+    @media (max-width: 479.98px){
+      margin-bottom: 40px;
+    }
   }
 
   &__image {
