--- a/src/index.scss
+++ b/src/index.scss
@@ -17,10 +17,12 @@ body {
   li {
     list-style-type: none;
   }
+
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #e7f6ff;
+
   .lock & {
     overflow: hidden;
     touch-action: none;
@@ -42,6 +44,7 @@ body {
 
 header {
   border-bottom: 1px solid #eaeaea;
+
   img {
     margin-right: 15px;
   }
@@ -70,6 +73,7 @@ header {
   align-items: center;
   justify-content: center;
   transition: background 0.3s;
+
   &:hover {
     background: #eee
   }
@@ -232,6 +236,7 @@ header {
   display: flex;
   flex-wrap: wrap;
   row-gap: 30px;
+  justify-content: center;
 }
 
 .icon {
@@ -241,4 +246,58 @@ header {
 .icon:hover {
   transform: scale(1.3);
   will-change: transform;
+}
+
+
+.bg {
+  position: fixed;
+  width: 250px;
+  z-index: 1;
+  @media (max-width: 1450px) {
+    width: 150px;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+
+.bg1 {
+  bottom: 0;
+  left: 0;
+  @media (max-width: 1300px) {
+    display: none;
+  }
+}
+
+.bg2 {
+  bottom: 0;
+  left: calc(100vw - 250px);
+  @media (max-width: 1300px) {
+    display: none;
+  }
+  .lock & {
+    right: 17px;
+  }
+}
+
+.bg3 {
+  top: 0;
+  left: 0;
+  transform: rotate(-270deg) translate(60px, 47px);
+  @media (max-width: 1160px) {
+    display: none;
+  }
+}
+
+.bg4 {
+  position: absolute;
+  top: 10px;
+  left: calc(100vw - 250px);
+  @media (max-width: 1450px) {
+    width: 250px;
+  }
+  //transform: rotate(-270deg) translate(60px, 47px);
 }
