--- a/src/pages/Favorites/favorites.scss
+++ b/src/pages/Favorites/favorites.scss
@@ -17,6 +17,9 @@
       font-size: 16px;
       width: 200px;
     }
+    @media (max-width: 991.98px){
+      display: none;
+    }
   }
   &__empty {
     display: flex;
@@ -32,5 +35,10 @@
     height: 45px;
     display: inline-block;
     width: 350px;
+    @media (max-width: 479.98px){
+      width: 250px;
+      height: 65px;
+      margin-left: 0px;
+    }
   }
 }
