--- a/src/pages/Orders/orders.scss
+++ b/src/pages/Orders/orders.scss
@@ -8,10 +8,16 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 40px;
+    @media (max-width: 767.98px){
+      flex-direction: column;
+    }
   }
   &__button {
     white-space: nowrap;
     flex: 0 0 300px;
+    @media (max-width: 767.98px){
+      flex: 1 1 auto;
+    }
   }
   &__items {
     display: flex;
@@ -20,7 +26,10 @@
   }
   &__image {
     width: 300px;
-    height: 250px;
+    //height: 250px;
+    @media (max-width: 767.98px){
+      width: 150px;
+    }
     img {
       width: 100%;
       height: 100%;
