--- a/src/index.scss
+++ b/src/index.scss
@@ -254,51 +254,53 @@ header {
   position: fixed;
   width: 250px;
   z-index: 1;
+
   @media (max-width: 1450px) {
     width: 150px;
   }
-
   img {
     width: 100%;
     height: 100%;
   }
+
 }
 
 
 .bg1 {
   bottom: 0;
   left: 0;
+  transition: all 0.5s ease-in-out 0.5s;
+  transform: translate(-105%, 0px);
   @media (max-width: 1300px) {
     display: none;
+  }
+  &.active {
+    transform: translate(0%, 0px);
   }
 }
 
 .bg2 {
   bottom: 0;
+  transition: all 0.5s ease-in-out 1.5s;
+  transform: translate(105%, 0px);
   left: calc(100vw - 250px);
   @media (max-width: 1300px) {
     display: none;
   }
-  .lock & {
-    right: 17px;
+  &.active {
+    transform: translate(0%, 0px);
   }
 }
 
 .bg3 {
   top: 0;
   left: 0;
-  transform: rotate(-270deg) translate(60px, 47px);
+  transition: all 0.5s ease-in-out 2.5s;
+  transform: rotate(-270deg) translate(60px, 300px);
   @media (max-width: 1160px) {
     display: none;
   }
-}
-
-.bg4 {
-  position: absolute;
-  top: 10px;
-  left: calc(100vw - 250px);
-  @media (max-width: 1450px) {
-    width: 250px;
+  &.active {
+    transform: rotate(-270deg) translate(60px, 47px);
   }
-  //transform: rotate(-270deg) translate(60px, 47px);
 }
