--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -13,9 +13,17 @@
     @media (max-width: 479.98px){
       margin-bottom: 40px;
     }
+    @media (any-hover: hover) {
+      &:hover {
+      .header__image {
+        transform: scale(1.1);
+      }
+     }
+    }
   }
 
   &__image {
+    transition: transform 0.3s ease 0s;
     img {
       width: 100%;
       height: 100%;
