--- a/src/pages/Orders/orders.scss
+++ b/src/pages/Orders/orders.scss
@@ -23,16 +23,25 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    min-height: 400px;
+    row-gap: 40px;
   }
   &__image {
     width: 300px;
-    //height: 250px;
+    height: 250px;
     @media (max-width: 767.98px){
       width: 150px;
+      height: 120px;
     }
     img {
       width: 100%;
       height: 100%;
     }
   }
+  &__out {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
+
